*Bug 110 - error when asking IRODSFile.exists with & in file name unit testing.  This is noted as an outstanding iRODS issue.  

------------
*made methods to retrieve misc server info public.

------------
*Bug 111 - Protocol exception returning binary (base64 encoded) data from execution of script 
Test cases, updated exec command method signatures to clean up unnecessary parms

-----------
*Resource allows add and delete of resource AVU metadata as well as list of resource metadata.  Beginning to add 'jargon-core' style code into the 
Jargon trunk.  Eventually, the two API will blend.

-----------
*added executeProxy() command to IRODSFileSystem that incudes hostname as a parameter

-----------
*Bug 113 - when there are three resources in the resource group, only two replicas are produced
Added new method in IRODSFile - replicateToResourceGroup(String resourceGroup)
Added a test.resource.group to the testing.properties file, and init code in the testsetup.sh file for unit testing of resource group command.

----------
*Bug 112 - query to get a resource AVU on a resource on an iRODS 2.3 using jargon 2.3
Added test case for proper usage in resource queries

----------
*Bug 114 - Bug 114 - performance of specific queries in Jargon 2.4 
Fixed ordering of AVU query components in GenQueryInp packing instruction sent to iRODS to avoid pathological SQL


================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org