@@ -67,7 +67,7 @@ public class IRODSFileInputStreamParallelTest {
     	String testFileName = "testFileGet.csv";
     	String getFileName = testingProperties.getProperty(
                 GENERATED_FILE_DIRECTORY_KEY) + IRODS_TEST_SUBDIR_PATH + '/' +"testFileGetReturn.csv";
-    	long testFileLength = 70000 * 1024;
+		long testFileLength = 1000000 * 1024;
 
         String testFileFullPath =  FileGenerator.generateFileOfFixedLengthGivenName(testingProperties.getProperty(
                 GENERATED_FILE_DIRECTORY_KEY) + IRODS_TEST_SUBDIR_PATH + '/', testFileName, testFileLength);
@@ -86,7 +86,7 @@ public class IRODSFileInputStreamParallelTest {
         IcommandInvoker invoker = new IcommandInvoker(invocationContext);
         invoker.invokeCommandAndGetResultAsString(iputCommand);
         
-       // Thread.sleep(3000);
+       //Thread.sleep(3000);
        
         IRODSAccount account = testingPropertiesHelper.buildIRODSAccountFromTestProperties(testingProperties);
         IRODSFileSystem irodsFileSystem = new IRODSFileSystem(account);
