@@ -42,8 +42,8 @@ test2.irods.resource=test1-resc2
 
 test.resource.group=testResourceGroup
 
-test.irods.host=192.168.56.102
-#test.irods.host=localhost
+#test.irods.host=192.168.56.102
+test.irods.host=localhost
 test.irods.port=1247
 test.irods.zone=test1
 
